Trying to adjust login creation

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "LocalHost": "Host=localhost;Database=sa;Username=sa;Password=123456"
+    "LocalHost": "Host=localhost;Database=YouthProtectionDb;Username=postgres;Password=123456"
   }
 
 }
