User road completed

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Token": "TrocaressasenhaparaoAzureKeyVaultLembre-seDissoPorraSerioqueTotentadoQuePorTantaMerdaNessaBosta"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
