--- a/appsettings.json
+++ b/appsettings.json
@@ -11,7 +11,8 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "LocalHost": "Host=localhost;Database=YouthProtectionDb;Username=postgres;Password=123456"
+    "LocalHost": "Host=localhost;Database=YouthProtectionDb;Username=postgres;Password=123456",
+    "SqlHost": "Host=localhost;Database=YouthProtectionDb;Username=postgres;Password=123456"
   }
 
 }
