--- a/appsettings.json
+++ b/appsettings.json
@@ -11,7 +11,8 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "LocalHost": "Host=localhost;Database=YouthProtectionDb;Username=postgres;Password=123456"
+    "PostGreeSql": "Host=localhost;Database=YouthProtectionDb;Username=postgres;Password=123456",
+    "SQLServer": "Server=localhost\\SQLEXPRESS;Database=YouthProtectionDb;User Id=sa;Password=123456;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true",
+    "Somee": "workstation id=YouthProtectionDB.mssql.somee.com;packet size=4096;user id=Well;pwd=12345678;data source=YouthProtectionDB.mssql.somee.com;persist security info=False;initial catalog=YouthProtectionDB;TrustServerCertificate=True"
   }
-
 }
